--- a/zotero.bib
+++ b/zotero.bib
@@ -1,4 +1,394 @@
 
+@incollection{cord_supervised_2008,
+	address = {Berlin, Heidelberg},
+	title = {Supervised {Learning}},
+	isbn = {978-3-540-75170-0 978-3-540-75171-7},
+	url = {http://link.springer.com/10.1007/978-3-540-75171-7_2},
+	language = {en},
+	urldate = {2023-06-26},
+	booktitle = {Machine {Learning} {Techniques} for {Multimedia}},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Cunningham, Pádraig and Cord, Matthieu and Delany, Sarah Jane},
+	editor = {Cord, Matthieu and Cunningham, Pádraig},
+	year = {2008},
+	doi = {10.1007/978-3-540-75171-7_2},
+	note = {Series Title: Cognitive Technologies},
+	pages = {21--49},
+}
+
+@article{liu_self-supervised_2021,
+	title = {Self-supervised {Learning}: {Generative} or {Contrastive}},
+	issn = {1041-4347, 1558-2191, 2326-3865},
+	shorttitle = {Self-supervised {Learning}},
+	url = {https://ieeexplore.ieee.org/document/9462394/},
+	doi = {10.1109/TKDE.2021.3090866},
+	urldate = {2023-06-26},
+	journal = {IEEE Transactions on Knowledge and Data Engineering},
+	author = {Liu, Xiao and Zhang, Fanjin and Hou, Zhenyu and Mian, Li and Wang, Zhaoyu and Zhang, Jing and Tang, Jie},
+	year = {2021},
+	pages = {1--1},
+}
+
+@book{russell_artificial_2021,
+	address = {Hoboken},
+	edition = {Fourth edition},
+	series = {Pearson series in artificial intelligence},
+	title = {Artificial intelligence: a modern approach},
+	isbn = {978-0-13-461099-3},
+	shorttitle = {Artificial intelligence},
+	abstract = {"Updated edition of popular textbook on Artificial Intelligence. This edition specific looks at ways of keeping artificial intelligence under control"--},
+	publisher = {Pearson},
+	author = {Russell, Stuart J. and Norvig, Peter},
+	year = {2021},
+	keywords = {Artificial intelligence},
+}
+
+@article{van_engelen_survey_2020,
+	title = {A survey on semi-supervised learning},
+	volume = {109},
+	issn = {0885-6125, 1573-0565},
+	url = {http://link.springer.com/10.1007/s10994-019-05855-6},
+	doi = {10.1007/s10994-019-05855-6},
+	abstract = {Abstract
+            Semi-supervised learning is the branch of machine learning concerned with using labelled as well as unlabelled data to perform certain learning tasks. Conceptually situated between supervised and unsupervised learning, it permits harnessing the large amounts of unlabelled data available in many use cases in combination with typically smaller sets of labelled data. In recent years, research in this area has followed the general trends observed in machine learning, with much attention directed at neural network-based models and generative learning. The literature on the topic has also expanded in volume and scope, now encompassing a broad spectrum of theory, algorithms and applications. However, no recent surveys exist to collect and organize this knowledge, impeding the ability of researchers and engineers alike to utilize it. Filling this void, we present an up-to-date overview of semi-supervised learning methods, covering earlier work as well as more recent advances. We focus primarily on semi-supervised classification, where the large majority of semi-supervised learning research takes place. Our survey aims to provide researchers and practitioners new to the field as well as more advanced readers with a solid understanding of the main approaches and algorithms developed over the past two decades, with an emphasis on the most prominent and currently relevant work. Furthermore, we propose a new taxonomy of semi-supervised classification algorithms, which sheds light on the different conceptual and methodological approaches for incorporating unlabelled data into the training process. Lastly, we show how the fundamental assumptions underlying most semi-supervised learning algorithms are closely connected to each other, and how they relate to the well-known semi-supervised clustering assumption.},
+	language = {en},
+	number = {2},
+	urldate = {2023-06-26},
+	journal = {Machine Learning},
+	author = {Van Engelen, Jesper E. and Hoos, Holger H.},
+	month = feb,
+	year = {2020},
+	pages = {373--440},
+}
+
+@article{arulkumaran_deep_2017,
+	title = {Deep {Reinforcement} {Learning}: {A} {Brief} {Survey}},
+	volume = {34},
+	issn = {1053-5888},
+	shorttitle = {Deep {Reinforcement} {Learning}},
+	url = {http://ieeexplore.ieee.org/document/8103164/},
+	doi = {10.1109/MSP.2017.2743240},
+	number = {6},
+	urldate = {2023-06-26},
+	journal = {IEEE Signal Processing Magazine},
+	author = {Arulkumaran, Kai and Deisenroth, Marc Peter and Brundage, Miles and Bharath, Anil Anthony},
+	month = nov,
+	year = {2017},
+	pages = {26--38},
+}
+
+@book{rosenblatt_principles_1962,
+	series = {Cornell {Aeronautical} {Laboratory}. {Report} no. {VG}-1196-{G}-8},
+	title = {Principles of {Neurodynamics}: {Perceptrons} and the {Theory} of {Brain} {Mechanisms}},
+	url = {https://books.google.ch/books?id=7FhRAAAAMAAJ},
+	publisher = {Spartan Books},
+	author = {Rosenblatt, Frank},
+	year = {1962},
+	lccn = {62012882},
+}
+
+@article{linnainmaa_taylor_1976,
+	title = {Taylor expansion of the accumulated rounding error},
+	volume = {16},
+	issn = {0006-3835, 1572-9125},
+	url = {http://link.springer.com/10.1007/BF01931367},
+	doi = {10.1007/BF01931367},
+	language = {en},
+	number = {2},
+	urldate = {2023-06-26},
+	journal = {BIT},
+	author = {Linnainmaa, Seppo},
+	month = jun,
+	year = {1976},
+	pages = {146--160},
+}
+
+@article{linnainmaa_taylor_1976-1,
+	title = {Taylor expansion of the accumulated rounding error},
+	volume = {16},
+	issn = {0006-3835, 1572-9125},
+	url = {http://link.springer.com/10.1007/BF01931367},
+	doi = {10.1007/BF01931367},
+	language = {en},
+	number = {2},
+	urldate = {2023-06-26},
+	journal = {BIT},
+	author = {Linnainmaa, Seppo},
+	month = jun,
+	year = {1976},
+	pages = {146--160},
+}
+
+@inproceedings{bengio_deep_2012,
+	address = {Bellevue, Washington, USA},
+	series = {Proceedings of {Machine} {Learning} {Research}},
+	title = {Deep {Learning} of {Representations} for {Unsupervised} and {Transfer} {Learning}},
+	volume = {27},
+	url = {https://proceedings.mlr.press/v27/bengio12a.html},
+	abstract = {Deep learning algorithms seek to exploit the unknown structure in the input distribution in order to discover good representations, often at multiple levels, with higher-level learned features defined in terms of lower-level features. The objective is to make these higher-level representations more abstract, with their individual features more invariant to most of the variations that are typically present in the training distribution, while collectively preserving as much as possible of the information in the input. Ideally, we would like these representations to disentangle the unknown factors of variation that underlie the training distribution. Such unsupervised learning of representations can be exploited usefully under the hypothesis that the input distribution P(x) is structurally related to some task of interest, say predicting P(y{\textbar}x). This paper focuses on the context of the Unsupervised and Transfer Learning Challenge, on why unsupervised pre-training of representations can be useful, and how it can be exploited in the transfer learning scenario, where we care about predictions on examples that are not from the same distribution as the training distribution.},
+	booktitle = {Proceedings of {ICML} {Workshop} on {Unsupervised} and {Transfer} {Learning}},
+	publisher = {PMLR},
+	author = {Bengio, Yoshua},
+	editor = {Guyon, Isabelle and Dror, Gideon and Lemaire, Vincent and Taylor, Graham and Silver, Daniel},
+	month = jul,
+	year = {2012},
+	pages = {17--36},
+}
+
+@article{cybenko_approximation_1989,
+	title = {Approximation by superpositions of a sigmoidal function},
+	volume = {2},
+	issn = {0932-4194, 1435-568X},
+	url = {http://link.springer.com/10.1007/BF02551274},
+	doi = {10.1007/BF02551274},
+	language = {en},
+	number = {4},
+	urldate = {2023-06-26},
+	journal = {Mathematics of Control, Signals, and Systems},
+	author = {Cybenko, G.},
+	month = dec,
+	year = {1989},
+	pages = {303--314},
+}
+
+@article{fukushima_visual_1969,
+	title = {Visual {Feature} {Extraction} by a {Multilayered} {Network} of {Analog} {Threshold} {Elements}},
+	volume = {5},
+	issn = {0536-1567},
+	url = {http://ieeexplore.ieee.org/document/4082265/},
+	doi = {10.1109/TSSC.1969.300225},
+	number = {4},
+	urldate = {2023-06-26},
+	journal = {IEEE Transactions on Systems Science and Cybernetics},
+	author = {Fukushima, Kunihiko},
+	year = {1969},
+	pages = {322--333},
+}
+
+@book{hebb_organization_1949,
+	address = {Oxford,  England},
+	title = {The {Organization} of {Behavior}; {A} {Neuropsychological} {Theory}},
+	publisher = {Psychology Press},
+	author = {Hebb, Donald O.},
+	year = {1949},
+}
+
+@book{costandi_neuroplasticity_2016,
+	address = {Cambridge, MA},
+	series = {The {MIT} {Press} essential knowledge series},
+	title = {Neuroplasticity},
+	isbn = {978-0-262-52933-4},
+	publisher = {The MIT Press},
+	author = {Costandi, Moheb},
+	year = {2016},
+	keywords = {Nervous system, Neural transmission, Neuroplasticity, Physiology},
+}
+
+@article{coombs_specific_1955,
+	title = {The specific ionic conductances and the ionic movements across the motoneuronal membrane that produce the inhibitory post-synaptic potential},
+	volume = {130},
+	issn = {00223751},
+	url = {https://onlinelibrary.wiley.com/doi/10.1113/jphysiol.1955.sp005412},
+	doi = {10.1113/jphysiol.1955.sp005412},
+	language = {en},
+	number = {2},
+	urldate = {2023-06-26},
+	journal = {The Journal of Physiology},
+	author = {Coombs, Jo S. and Eccles, John C. and Fatt, Paul},
+	month = nov,
+	year = {1955},
+	pages = {326--373},
+}
+
+@article{takagi_roles_2000,
+	title = {Roles of ion channels in {EPSP} integration at neuronal dendrites},
+	volume = {37},
+	issn = {01680102},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0168010200001206},
+	doi = {10.1016/S0168-0102(00)00120-6},
+	language = {en},
+	number = {3},
+	urldate = {2023-06-26},
+	journal = {Neuroscience Research},
+	author = {Takagi, Hiroshi},
+	month = jul,
+	year = {2000},
+	pages = {167--171},
+}
+
+@article{felleman_distributed_1991,
+	title = {Distributed {Hierarchical} {Processing} in the {Primate} {Cerebral} {Cortex}},
+	volume = {1},
+	issn = {1047-3211, 1460-2199},
+	url = {https://academic.oup.com/cercor/article-lookup/doi/10.1093/cercor/1.1.1},
+	doi = {10.1093/cercor/1.1.1},
+	language = {en},
+	number = {1},
+	urldate = {2023-06-26},
+	journal = {Cerebral Cortex},
+	author = {Felleman, Daniel J. and Van Essen, David C.},
+	month = jan,
+	year = {1991},
+	pages = {1--47},
+}
+
+@article{rumelhart_learning_1986,
+	title = {Learning representations by back-propagating errors},
+	volume = {323},
+	issn = {0028-0836, 1476-4687},
+	url = {https://www.nature.com/articles/323533a0},
+	doi = {10.1038/323533a0},
+	language = {en},
+	number = {6088},
+	urldate = {2023-06-26},
+	journal = {Nature},
+	author = {Rumelhart, David E. and Hinton, Geoffrey E. and Williams, Ronald J.},
+	month = oct,
+	year = {1986},
+	pages = {533--536},
+}
+
+@article{herculano-houzel_human_2009,
+	title = {The human brain in numbers: a linearly scaled-up primate brain},
+	volume = {3},
+	issn = {16625161},
+	shorttitle = {The human brain in numbers},
+	url = {http://journal.frontiersin.org/article/10.3389/neuro.09.031.2009/abstract},
+	doi = {10.3389/neuro.09.031.2009},
+	urldate = {2023-06-26},
+	journal = {Frontiers in Human Neuroscience},
+	author = {Herculano-Houzel, Suzana},
+	year = {2009},
+}
+
+@article{zeng_neuronal_2017,
+	title = {Neuronal cell-type classification: challenges, opportunities and the path forward},
+	volume = {18},
+	issn = {1471-003X, 1471-0048},
+	shorttitle = {Neuronal cell-type classification},
+	url = {https://www.nature.com/articles/nrn.2017.85},
+	doi = {10.1038/nrn.2017.85},
+	language = {en},
+	number = {9},
+	urldate = {2023-06-26},
+	journal = {Nature Reviews Neuroscience},
+	author = {Zeng, Hongkui and Sanes, Joshua R.},
+	month = sep,
+	year = {2017},
+	pages = {530--546},
+}
+
+@book{james_principles_1890,
+	title = {The principles of psychology},
+	publisher = {Henry Holt and Company},
+	author = {James, William},
+	year = {1890},
+}
+
+@book{bain_mind_1873,
+	address = {New York},
+	title = {Mind and body: {The} theories of their relation},
+	volume = {1},
+	publisher = {D. Appleton and Company},
+	author = {Bain, Alexander},
+	year = {1873},
+}
+
+@article{hopfield_neural_1982,
+	title = {Neural networks and physical systems with emergent collective computational abilities.},
+	volume = {79},
+	issn = {0027-8424, 1091-6490},
+	url = {https://pnas.org/doi/full/10.1073/pnas.79.8.2554},
+	doi = {10.1073/pnas.79.8.2554},
+	abstract = {Computational properties of use of biological organisms or to the construction of computers can emerge as collective properties of systems having a large number of simple equivalent components (or neurons). The physical meaning of content-addressable memory is described by an appropriate phase space flow of the state of a system. A model of such a system is given, based on aspects of neurobiology but readily adapted to integrated circuits. The collective properties of this model produce a content-addressable memory which correctly yields an entire memory from any subpart of sufficient size. The algorithm for the time evolution of the state of the system is based on asynchronous parallel processing. Additional emergent collective properties include some capacity for generalization, familiarity recognition, categorization, error correction, and time sequence retention. The collective properties are only weakly sensitive to details of the modeling or the failure of individual devices.},
+	language = {en},
+	number = {8},
+	urldate = {2023-06-26},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Hopfield, J J},
+	month = apr,
+	year = {1982},
+	pages = {2554--2558},
+}
+
+@article{lecun_deep_2015,
+	title = {Deep learning},
+	volume = {521},
+	issn = {0028-0836, 1476-4687},
+	url = {https://www.nature.com/articles/nature14539},
+	doi = {10.1038/nature14539},
+	language = {en},
+	number = {7553},
+	urldate = {2023-06-26},
+	journal = {Nature},
+	author = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+	month = may,
+	year = {2015},
+	pages = {436--444},
+}
+
+@book{mitchell_machine_1997,
+	address = {New York},
+	series = {{McGraw}-{Hill} series in computer science},
+	title = {Machine {Learning}},
+	isbn = {978-0-07-042807-2},
+	publisher = {McGraw-Hill},
+	author = {Mitchell, Tom M.},
+	year = {1997},
+	keywords = {Computer algorithms, Machine learning},
+}
+
+@misc{radford_improving_2018,
+	title = {Improving language understanding by generative pre-training},
+	url = {https://www.cs.ubc.ca/~amuham01/LING530/papers/radford2018improving.pdf},
+	urldate = {2023-06-24},
+	author = {Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya},
+	year = {2018},
+}
+
+@misc{noauthor_improving_nodate,
+	title = {Improving language understanding by generative pre-training},
+}
+
+@article{wiskott_face_1997,
+	title = {Face recognition by elastic bunch graph matching},
+	volume = {19},
+	issn = {0162-8828, 2160-9292},
+	url = {http://ieeexplore.ieee.org/document/598235/},
+	doi = {10.1109/34.598235},
+	number = {7},
+	urldate = {2023-06-14},
+	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	author = {Wiskott, Laurenz and Fellous, Jean-Marc and Kuiger, Norbert and Von Der Malsburg, Christoph},
+	month = jul,
+	year = {1997},
+	pages = {775--779},
+}
+
+@book{ivakhnenko_cybernetic_1965,
+	address = {New York},
+	title = {Cybernetic {Predicting} {Devices}},
+	publisher = {CCM Information Corporation},
+	author = {Ivakhnenko, Aleksei G. and Lapa, Valentin G.},
+	year = {1965},
+}
+
+@article{wolfrum_recurrent_2008,
+	title = {A recurrent dynamic model for correspondence-based face recognition},
+	volume = {8},
+	issn = {1534-7362},
+	url = {http://jov.arvojournals.org/article.aspx?doi=10.1167/8.7.34},
+	doi = {10.1167/8.7.34},
+	language = {en},
+	number = {7},
+	urldate = {2023-03-06},
+	journal = {Journal of Vision},
+	author = {Wolfrum, Philipp and Wolff, Christian and Lücke, Jörg and von der Malsburg, Christoph},
+	month = dec,
+	year = {2008},
+	pages = {34},
+}
+
 @misc{von_der_malsburg_theory_2022,
 	title = {A {Theory} of {Natural} {Intelligence}},
 	url = {http://arxiv.org/abs/2205.00002},
@@ -67,13 +457,6 @@ matching state-of-the-art model-free and model-based algorithms on MuJoCo contro
 	month = oct,
 	year = {2022},
 	pages = {102847},
-}
-
-@article{radford_improving_2018,
-	title = {Improving language understanding by generative pre-training},
-	url = {https://www.cs.ubc.ca/~amuham01/LING530/papers/radford2018improving.pdf},
-	author = {Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya},
-	year = {2018},
 }
 
 @misc{rosenbloom_defining_2023,
@@ -188,14 +571,6 @@ matching state-of-the-art model-free and model-based algorithms on MuJoCo contro
 	month = sep,
 	year = {2021},
 	pages = {1--38},
-}
-
-@book{ivakhnenko_cybernetic_1965,
-	address = {New York},
-	title = {Cybernetic {Predicting} {Devices}},
-	publisher = {CCM Information Corporation},
-	author = {Ivakhnenko, Aleksei Grigorévich and Lapa, Valentin Grigorévich},
-	year = {1965},
 }
 
 @misc{liu_summary_2023,
